# json-benchmarks

./: Cargo.toml
src/: avro.rs  io.rs  main.rs
