[package]
name = "learningrust"
version = "0.1.0"
authors = ["shafirasulov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.0"
serde_json = "1.0.44"
avro-rs = "0.6.5"
flate2 = "1.0.13"
simd-json = "0.2.2"