[package]
name = "learningrust"
version = "0.1.0"
authors = ["shafirasulov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.0"
serde_json = "1.0.44"
avro-rs = { path = "../avro-rs" }
flate2 = { version = "1.0", features = ["miniz-sys"], default-features = false }
simd-json = "0.2.2"
failure = "0.1.6"
dns-lookup = "1.0.1"
libdeflater = "0.2.0"
deflate = "0.8.2"
regex = "1.3.3"